Fix issue with footer stretching the page in mobile

--- a/themes/Sanderson/source/css/_partial/archive.styl
+++ b/themes/Sanderson/source/css/_partial/archive.styl
@@ -50,7 +50,7 @@
 
 #page-nav
   clearfix()
-  width: (column-width + gutter-width) * columns + gutter-width
+  max-width: (column-width + gutter-width) * columns + gutter-width
   margin: 0 auto
   // background: #fff
   // box-shadow: 1px 2px 3px #ddd
